--- a/resources/assets/sass/footer.scss
+++ b/resources/assets/sass/footer.scss
@@ -97,6 +97,11 @@ footer {
 		color: #CCC;
 		font-size: 1.1em;
 	}
+
+	.row {
+		margin-left: 0 !important;
+		margin-right: 0 !important;
+	}
 }
 
 .footer-fungi {
